# emerald-api-rs

./: .gitmodules  Cargo.toml  README.adoc  build.rs
.github/workflows/: publish.yaml  test.yaml
src/: conn.rs  creds.rs  errors.rs  lib.rs
src/common/: blockchain_ref.rs  mod.rs
tests/: auth_test.rs  market_test.rs
