[package]
name = "emerald-api"
description = "Emerald API"
repository = "https://github.com/emeraldpay/emerald-api-rs"
version = "0.1.0-dev"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tonic = { version = "0.12", features = ["codegen", "prost"], default-features = false }
prost = "^0.13"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"], optional = true }

[build-dependencies]
tonic-build = "0.12"

[features]
default = []
tonic = ["tonic/transport", "tonic/tls", "tonic/tls-native-roots"]
client = ["dep:tokio", "tonic", "auth"]
server = ["dep:tokio", "tonic"]

auth = []
client-auth = ["auth", "client"]
server-auth = ["auth", "server"]

blockchain = []
client-blockchain = ["blockchain", "client"]
server-blockchain = ["blockchain", "server"]

market = []
client-market = ["market", "client"]
server-market = ["market", "server"]

monitoring = []
client-monitoring = ["monitoring", "client"]
server-monitoring = ["monitoring", "server"]

transaction = []
client-transaction = ["transaction", "client"]
server-transaction = ["transaction", "server"]