[package]
name = "emerald-api"
description = "Emerald API"
repository = "https://github.com/emeraldpay/emerald-api-rs"
version = "0.1.0-dev"
edition = "2021"
license = "Apache-2.0"

[dependencies]
tonic = { version = "0.14", features = ["codegen", "router"], default-features = false }
tonic-prost = "0.14"
prost = "^0.14"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"], optional = true }
tower = "0.5"
futures = "0.3.30"
bytes = "1.7.1"
http-body = "1.0"
tracing = "0.1"
chrono = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"

[dev-dependencies]
tokio-macros = "2.6"
tracing-subscriber = { version = "0.3" , features = ["env-filter", "fmt"]}

[features]
default = []
tonic = ["tonic/transport", "tonic/tls-ring", "tonic/tls-native-roots"]
client = ["dep:tokio", "tonic", "client-auth"]
server = ["dep:tokio", "tonic"]

auth = []
client-auth = ["auth", "client"]
server-auth = ["auth", "server"]

blockchain = []
client-blockchain = ["blockchain", "client"]
server-blockchain = ["blockchain", "server"]

market = []
client-market = ["market", "client"]
server-market = ["market", "server"]

monitoring = []
client-monitoring = ["monitoring", "client"]
server-monitoring = ["monitoring", "server"]

transaction = []
client-transaction = ["transaction", "client"]
server-transaction = ["transaction", "server"]

token = []
client-token = ["token", "client"]
server-token = ["token", "server"]